sumo/tests/sumo/errors/unknown_option/output.sumo
SUMO sumo Version dev-SVN-r4172
 (c) DLR/ZAIK 2000-2007; http://sumo.sourceforge.net
 Use --help to get the list of options.
